--- a/views/index.erb
+++ b/views/index.erb
@@ -16,3 +16,17 @@
 </ul>
 
 <p><a href="/new">New Document</a></p>
+
+<% if session[:user] %>
+  <form action="/users/signout" method="post">
+    <p class="user-status">
+      Signed in as <%= session[:user] %>.
+      <button type="submit">Sign Out</button>
+    </p>
+  </form>
+<% else %>
+  <p class="user-status">
+    <a href="/users/signin">Sign In</a> or
+    <a href="/users/signup">Sign Up</a>
+  </p>
+<% end %>
